src/Application/Keyspace/Client/CSharp/keyspace_clientPINVOKE.cs


  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_AddNode")]
  public static extern void Keyspace_NodeParams_AddNode(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_nodec_set")]
  public static extern void Keyspace_NodeParams_nodec_set(HandleRef jarg1, int jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_nodec_get")]
  public static extern int Keyspace_NodeParams_nodec_get(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_nodes_set")]
  public static extern void Keyspace_NodeParams_nodes_set(HandleRef jarg1, HandleRef jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_nodes_get")]
  public static extern IntPtr Keyspace_NodeParams_nodes_get(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_num_set")]
  public static extern void Keyspace_NodeParams_num_set(HandleRef jarg1, int jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_NodeParams_num_get")]
  public static extern int Keyspace_NodeParams_num_get(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultBegin")]
  public static extern void Keyspace_ResultBegin(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultNext")]
  public static extern void Keyspace_ResultNext(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultIsEnd")]
  public static extern bool Keyspace_ResultIsEnd(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultClose")]
  public static extern void Keyspace_ResultClose(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultKey")]
  public static extern string Keyspace_ResultKey(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultValue")]
  public static extern string Keyspace_ResultValue(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultTransportStatus")]
  public static extern int Keyspace_ResultTransportStatus(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultConnectivityStatus")]
  public static extern int Keyspace_ResultConnectivityStatus(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultTimeoutStatus")]
  public static extern int Keyspace_ResultTimeoutStatus(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ResultCommandStatus")]
  public static extern int Keyspace_ResultCommandStatus(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Create")]
  public static extern IntPtr Keyspace_Create();

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Init")]
  public static extern int Keyspace_Init(HandleRef jarg1, HandleRef jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Destroy")]
  public static extern void Keyspace_Destroy(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_GetResult")]
  public static extern IntPtr Keyspace_GetResult(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_SetGlobalTimeout")]
  public static extern void Keyspace_SetGlobalTimeout(HandleRef jarg1, ulong jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_SetMasterTimeout")]
  public static extern void Keyspace_SetMasterTimeout(HandleRef jarg1, ulong jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_GetGlobalTimeout")]
  public static extern ulong Keyspace_GetGlobalTimeout(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_GetMasterTimeout")]
  public static extern ulong Keyspace_GetMasterTimeout(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_GetMaster")]
  public static extern int Keyspace_GetMaster(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DistributeDirty")]
  public static extern void Keyspace_DistributeDirty(HandleRef jarg1, bool jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Get")]
  public static extern int Keyspace_Get(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyGet")]
  public static extern int Keyspace_DirtyGet(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Count")]
  public static extern int Keyspace_Count(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_CountStr")]
  public static extern int Keyspace_CountStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyCount")]
  public static extern int Keyspace_DirtyCount(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyCountStr")]
  public static extern int Keyspace_DirtyCountStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ListKeys")]
  public static extern int Keyspace_ListKeys(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ListKeysStr")]
  public static extern int Keyspace_ListKeysStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyListKeys")]
  public static extern int Keyspace_DirtyListKeys(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyListKeysStr")]
  public static extern int Keyspace_DirtyListKeysStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ListKeyValues")]
  public static extern int Keyspace_ListKeyValues(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_ListKeyValuesStr")]
  public static extern int Keyspace_ListKeyValuesStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyListKeyValues")]
  public static extern int Keyspace_DirtyListKeyValues(HandleRef jarg1, string jarg2, string jarg3, ulong jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_DirtyListKeyValuesStr")]
  public static extern int Keyspace_DirtyListKeyValuesStr(HandleRef jarg1, string jarg2, string jarg3, string jarg4, bool jarg5, bool jarg6);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Set")]
  public static extern int Keyspace_Set(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_TestAndSet")]
  public static extern int Keyspace_TestAndSet(HandleRef jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Add")]
  public static extern int Keyspace_Add(HandleRef jarg1, string jarg2, long jarg3);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_AddStr")]
  public static extern int Keyspace_AddStr(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Delete")]
  public static extern int Keyspace_Delete(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Remove")]
  public static extern int Keyspace_Remove(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Rename")]
  public static extern int Keyspace_Rename(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Prune")]
  public static extern int Keyspace_Prune(HandleRef jarg1, string jarg2);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Begin")]
  public static extern int Keyspace_Begin(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Submit")]
  public static extern int Keyspace_Submit(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_Cancel")]
  public static extern int Keyspace_Cancel(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_IsBatched")]
  public static extern bool Keyspace_IsBatched(HandleRef jarg1);

  [DllImport("keyspace_client", EntryPoint="CSharp_Keyspace_SetTrace")]
  public static extern void Keyspace_SetTrace(bool jarg1);
}
